apps/homepage/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: homepage

spec:
  ports:
    - name: homepage
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: homepage
    task: homepage
  type: ClusterIP
