apps/homepage/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: dev.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.dev.anotherlife.org.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: homepage
          port: 3000
  tls:
    domains:
      - main: dev.anotherlife.org.pl
        sans:
          - .dev.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-dev
